<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingBottom="80dp">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:layout_margin="16dp"
        android:padding="16dp"
        app:cardBackgroundColor="@android:color/white"
        app:cardCornerRadius="20dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="#96bb7c">

            <TextView
                android:id="@+id/tvTitles"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="10dp"
                android:text="Jadwal Sholat"
                android:fontFamily="@font/gravity_bold"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="24sp"
                android:textStyle="bold" />

            <RelativeLayout
                android:id="@+id/rlSpin"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/tvTitles"
                android:layout_marginLeft="25dp"
                android:layout_marginTop="10dp"
                android:layout_marginRight="25dp"
                android:background="@drawable/textlines"
                android:gravity="center">

                <Spinner
                    android:id="@+id/spinKota"
                    android:layout_width="match_parent"
                    android:layout_height="50dp" />

            </RelativeLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/rlSpin"
                android:layout_margin="10dp"
                android:orientation="vertical">

                <com.vivekkaushik.datepicker.DatePickerTimeline
                    android:id="@+id/dateTimeline"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/bg_circle_radius_primary"
                    android:backgroundTint="@color/colorPrimary"
                    app:dateTextColor="#184d47"
                    app:dayTextColor="#184d47"
                    app:monthTextColor="#184d47" />

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp">

                    <TextView
                        android:id="@+id/tv_pray_name_fajr"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentStart="true"
                        android:layout_marginStart="40dp"
                        android:text="@string/subuh"
                        android:fontFamily="@font/gravity_bold"
                        android:textColor="#184d47" />

                    <TextView
                        android:id="@+id/tv_subuh"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentEnd="true"
                        android:layout_marginEnd="40dp"
                        android:fontFamily="@font/gravity_bold"
                        android:textColor="#184d47"
                        android:text="@string/_05_30_am" />

                </RelativeLayout>

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp">

                    <TextView
                        android:id="@+id/tv_pray_name_dhuhr"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentStart="true"
                        android:layout_marginStart="40dp"
                        android:fontFamily="@font/gravity_bold"
                        android:textColor="#184d47"
                        android:text="@string/zuhur" />

                    <TextView
                        android:id="@+id/tv_dzuhur"
                        android:fontFamily="@font/gravity_bold"
                        android:textColor="#184d47"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentEnd="true"
                        android:layout_marginEnd="40dp"
                        android:text="@string/_05_30_am" />

                </RelativeLayout>

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp">

                    <TextView
                        android:id="@+id/tv_pray_name_asr"
                        android:layout_width="wrap_content"
                        android:fontFamily="@font/gravity_bold"
                        android:textColor="#184d47"
                        android:layout_height="wrap_content"
                        android:layout_alignParentStart="true"
                        android:layout_marginStart="40dp"
                        android:text="@string/ashar" />

                    <TextView
                        android:id="@+id/tv_ashar"
                        android:layout_width="wrap_content"
                        android:fontFamily="@font/gravity_bold"
                        android:textColor="#184d47"
                        android:layout_height="wrap_content"
                        android:layout_alignParentEnd="true"
                        android:layout_marginEnd="40dp"
                        android:text="@string/_05_30_am" />

                </RelativeLayout>

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp">

                    <TextView
                        android:id="@+id/tv_pray_name_maghrib"
                        android:layout_width="wrap_content"
                        android:fontFamily="@font/gravity_bold"
                        android:textColor="#184d47"
                        android:layout_height="wrap_content"
                        android:layout_alignParentStart="true"
                        android:layout_marginStart="40dp"
                        android:text="@string/maghrib" />

                    <TextView
                        android:id="@+id/tv_maghrib"
                        android:fontFamily="@font/gravity_bold"
                        android:textColor="#184d47"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentEnd="true"
                        android:layout_marginEnd="40dp"
                        android:text="@string/_05_30_am" />

                </RelativeLayout>

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp">

                    <TextView
                        android:id="@+id/tv_pray_name_isha"
                        android:fontFamily="@font/gravity_bold"
                        android:textColor="#184d47"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentStart="true"
                        android:layout_marginStart="40dp"
                        android:text="@string/isya" />

                    <TextView
                        android:id="@+id/tv_isya"
                        android:fontFamily="@font/gravity_bold"
                        android:textColor="#184d47"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentEnd="true"
                        android:layout_marginEnd="40dp"
                        android:text="@string/_05_30_am" />

                </RelativeLayout>

            </LinearLayout>

        </RelativeLayout>

    </androidx.cardview.widget.CardView>

</FrameLayout>